# booking_agent

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt  run_assistant.py  test_interactive_message.py
.config/.semgrep/: settings.yml
bookingAgent/: pyvenv.cfg
bookingAgent/Scripts/: activate  activate.bat
src/: astradb_services.py  attio_test_script.py  bookingagent_api.py  email_service.py  gmail_service.py  google_docs_service.py  main.py  main_v2.py  slack_interactivity.py  test_new_webhook.py  test_pipeline.py  test_webhook.py  utils.py
src/Test Case/: test_multiple_scenarios.py
